package designmode.creation.builder;

public interface AirShipDirector {

    /**
     * 组装飞船对象
     * @return
     */
    AirShip directAirShip();
}
